# Kairos

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MOBILE_ROADMAP.md  pyproject.toml  requirements.txt  start.py
config/: vocab_hints.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: acquisition.ts  analysis.ts  captions.ts  client.ts  clips.ts  jobs.ts  library.ts  render.ts  smartQuery.ts  sources.ts  stories.ts  transcription.ts  types.ts
frontend/src/hooks/: useAnalysis.ts  useClips.ts  useKeyboardShortcuts.ts  useLibrary.ts  useRender.ts  useSources.ts  useTimelinePlayback.ts  useTranscription.ts  useVideoSync.ts
frontend/src/pages/: CaptionsPage.tsx  ClipsPage.tsx  ItemPage.tsx  (+9 more)
kairos/: config.py  database.py  main.py  models.py  schemas.py  tasks.py  worker.py
kairos/routers/: acquisition.py  analysis.py  captions.py  clips.py  jobs.py  library.py  render.py  smart_query.py  stories.py  system.py  timelines.py  transcription.py
kairos/services/: llm_providers.py  orchestrator.py
scripts/: push_query.py
templates/: commentary_mashup.json  debate_highlights.json  news_explainer.json  podcast_highlights.json  political_campaign.json  viral_reel.json
tests/: conftest.py  test_acquisition.py  test_analysis.py  test_captions.py  test_captions_export.py  test_clips.py  test_jobs.py  test_library.py  test_render.py  test_smart_query.py  test_stories.py  test_system.py  test_timelines.py  test_transcription.py  test_unit_services.py  test_upload.py
(+116 files in other folders)
